--- a/dev/deployment.yaml
+++ b/dev/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: my-app
-        image: my-app:latest
+        image: acrgitopslab.azurecr.io/my-app:latest
         ports:
         - containerPort: 3000
         resources:
