--- a/dev/deployment.yaml
+++ b/dev/deployment.yaml
@@ -4,7 +4,7 @@ metadata:
   name: my-app
   namespace: dev
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: my-app
@@ -13,12 +13,22 @@ spec:
       labels:
         app: my-app
     spec:
+      imagePullSecrets:              # ← LIGNE À AJOUTER
+      - name: acr-secret             # ← LIGNE À AJOUTER
       containers:
       - name: my-app
-        image: acrgitopslab.azurecr.io/my-app:latest
+        image: acrgitopslab.azurecr.io/gitops-demo-app:latest  # ← Vérifiez le nom
         ports:
         - containerPort: 3000
+        env:
+        - name: NODE_ENV
+          value: "development"
+        - name: APP_VERSION
+          value: "1.0.0"
         resources:
-          limits:
+          requests:
             memory: "128Mi"
-            cpu: "500m"
+            cpu: "100m"
+          limits:
+            memory: "256Mi"
+            cpu: "200m"
