--- a/dev/kustomization.yaml
+++ b/dev/kustomization.yaml
@@ -1,8 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-resources:
-- deployment.yaml
-- service.yaml
 namespace: dev
-commonLabels:
-  environment: dev
+resources:
+  - acr-secret.yaml      # ← LIGNE À AJOUTER
+  - deployment.yaml
+  - service.yaml
