--- a/dev/service.yaml
+++ b/dev/service.yaml
@@ -4,9 +4,10 @@ metadata:
   name: my-app
   namespace: dev
 spec:
+  type: LoadBalancer   # <- ici
   selector:
     app: my-app
   ports:
-  - port: 80
+  - protocol: TCP
+    port: 80
     targetPort: 3000
-  type: ClusterIP
