feat: Add Kubernetes LoadBalancer Service for `my-app` in `dev` namespace.

--- a/dev/service.yaml
+++ b/dev/service.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   type: LoadBalancer   # <- ici
   selector:
-    app: my-app
+    app: gitops-demo-app
   ports:
   - protocol: TCP
     port: 80
